Home work 4. Made changes